WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61244
Undo operations for a web page linger after page is destroyed
https://bugs.webkit.org/show_bug.cgi?id=61244
Summary
Undo operations for a web page linger after page is destroyed
John Sullivan
Reported
2011-05-21 22:37:07 PDT
Page editing commands are registered with an NSUndoManager on Mac (and a similar mechanism on windows), but there’s no code to tell the NSUndoManager that these operations are no longer valid for Undoing once the page has been closed. This can lead to crashes downstream. In Radar as <
rdar://problem/9482856
>.
Attachments
Patch to clear edit commands in WebPageProxy::closePage()
(1.83 KB, patch)
2011-05-21 22:42 PDT
,
John Sullivan
no flags
Details
Formatted Diff
Diff
Same patch as last time but without Xcode-initiated tweak to project file.
(1.29 KB, patch)
2011-05-21 22:43 PDT
,
John Sullivan
darin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
John Sullivan
Comment 1
2011-05-21 22:42:09 PDT
Created
attachment 94335
[details]
Patch to clear edit commands in WebPageProxy::closePage()
John Sullivan
Comment 2
2011-05-21 22:43:29 PDT
Created
attachment 94336
[details]
Same patch as last time but without Xcode-initiated tweak to project file.
John Sullivan
Comment 3
2011-05-22 09:30:27 PDT
Fixed in <
http://trac.webkit.org/changeset/87030
>.
John Sullivan
Comment 4
2011-05-22 15:30:23 PDT
I accidentally checked into a branch instead of trunk, rolled out in 87045.
John Sullivan
Comment 5
2011-05-22 15:36:21 PDT
Checked into tip of tree in
http://trac.webkit.org/changeset/87046
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug