https://bugs.webkit.org/show_bug.cgi?id=61244 <rdar://problem/9482856> Undo operations for a web page linger after page is destroyed

Reviewed by Darin Adler.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::closePage):
Clear editing commands before telling UI client to close the page (this must be done
while the page is still in a window so its undo manager can be accessed, so waiting
for WebPageProxy::close() is too late).



Canonical link: https://commits.webkit.org/76634@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@87046 268f45cc-cd09-0410-ab3c-d52691b4dbfc